examples/test/testpolicy12184.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12184
  namespace: namespace414
spec:
  podSelector:
    matchLabels:
      key5: value31
      key21: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value1
      podSelector:
        matchLabels:
          key30: value19
          key5: value6
